# ascii-webcam

./: .gitignore  CMakeLists.txt  README.md  test.txt  tmp.py
bitmaps/: #.bitmask  %.bitmask  *.bitmask  +.bitmask  -.bitmask  ..bitmask  :.bitmask  =.bitmask  @.bitmask
bkup/: ascii.cpp  bitmask_16.hpp  bitmask_64.hpp  bkup.cpp  capture.cpp  main.cpp  output.hpp  test.cpp  test2.cpp
include/common/: ArgParser.hpp  AsciiProcessor.hpp  bitmask_16.hpp
include/linux/: VideoCapture.hpp  VideoOutput.hpp
src/: AsciiProcessor.cpp  AsciiProcessor.hpp  VideoCapture.cpp  VideoCapture.hpp  main.cpp
src/Exception/: Exception.cpp
src/common/: ArgParser.cpp  AsciiProcessor.cpp
src/linux/: VideoCapture.cpp  VideoCapture.hpp  VideoOutput.cpp
